<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_text"
        android:textColor="@color/colorPrimary"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"></TextView>
    <Button
        android:id="@+id/button_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorPrimary"
        android:drawableEnd="@drawable/thumb_up"
        android:textColor="@color/white"
        android:text="@string/yes">
    </Button>

    <Button
        android:id="@+id/button_no"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableEnd="@drawable/thumb_down"
        android:textColor="@color/white"
        android:text="@string/no">
    </Button>

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_extra"
        android:textColor="@color/colorPrimary"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        ></TextView>

    <EditText
        android:padding="10dp"
        android:gravity="top|left"
        android:id="@+id/feedback_response"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_border"></EditText>

    <Button
        android:id="@+id/feedback_send"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/hint_feedback"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimary"
        android:drawableEnd="@drawable/ic_menu_send"
        android:text="@string/send">
    </Button>

</LinearLayout>
</ScrollView>

